force-app/main/default/objects/cgcloud__Fund_Template__c/cgcloud__Fund_Template__c.object-meta.xml
<CustomObject>
    <description>Template for the creation of a fund.</description>
    <label>Fund Template</label>
    <nameField>
        <label>Fund Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fund Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>