force-app/main/default/objects/cgcloud__Fund_Template__c/fields/cgcloud__Actual_RBF__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Actual_RBF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The KPI definition that will be used for the &quot;Actual RBF&quot; Total KPI</description>
    <label>Actual RBF</label>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>Actual RBF</relationshipLabel>
    <relationshipName>FT_Actual_RBF</relationshipName>
    <type>Lookup</type>
</CustomField>