force-app/main/default/objects/cgcloud__Fund_Template__c/fields/cgcloud__Anchor_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Anchor_Type__c</fullName>
    <description>Specifies the anchor type of the fund.</description>
    <label>Anchor Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Customer</fullName>
                <default>true</default>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Customer Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>