force-app/main/default/objects/cgcloud__Fund_Template__c/fields/cgcloud__Currency__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Currency__c</fullName>
    <description>Currency of the sales organization linked to this Fund Template.</description>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__Currency</valueSetName>
    </valueSet>
</CustomField>