force-app/main/default/objects/cgcloud__Fund_Template__c/fields/cgcloud__KPI_Set__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The KPI Set associated with the Fund Template. KPI set associated with Fund Template is not deleteable</description>
    <label>KPI Set</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria.Please select KPI Set with usage as Funding</errorMessage>
        <filterItems>
            <field>cgcloud__KPI_Set__c.cgcloud__Usage__c</field>
            <operation>equals</operation>
            <value>Funding</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__KPI_Set__c</referenceTo>
    <relationshipLabel>Fund Templates</relationshipLabel>
    <relationshipName>Fund_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>