force-app/main/default/objects/cgcloud__Fund_Template__c/fields/cgcloud__LE_RBF__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__LE_RBF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The KPI  definition that will be used for the &quot;LE RBF&quot; Total KPI</description>
    <label>LE RBF</label>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>LE RBF</relationshipLabel>
    <relationshipName>FT_LE_RBF</relationshipName>
    <type>Lookup</type>
</CustomField>