force-app/main/default/objects/cgcloud__Fund_Template__c/fields/cgcloud__LE_Revenue__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__LE_Revenue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LE Revenue</label>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>LE Revenue</relationshipLabel>
    <relationshipName>FT_LE_Revenue</relationshipName>
    <type>Lookup</type>
</CustomField>