force-app/main/default/objects/cgcloud__Fund_Template__c/fields/cgcloud__LE_Volume__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__LE_Volume__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The KPI definition that will be used for the &quot;LE Volume&quot; Total KPI.</description>
    <label>LE Volume</label>
    <referenceTo>cgcloud__KPI_Definition__c</referenceTo>
    <relationshipLabel>LE Volume</relationshipLabel>
    <relationshipName>FT_LE_Volume</relationshipName>
    <type>Lookup</type>
</CustomField>