force-app/main/default/objects/cgcloud__Fund_Template__c/fields/cgcloud__Product_Anchor_Level__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Anchor_Level__c</fullName>
    <description>Controls the Level of the Product Anchor (if any) of the Fund</description>
    <inlineHelpText>Defines the level of the Product Anchor.</inlineHelpText>
    <label>Product Anchor Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>