force-app/main/default/objects/cgcloud__Fund_Template__c/validationRules/cgcloud__If_Anchor_Type_Customer_No_Product_Level.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__If_Anchor_Type_Customer_No_Product_Level</fullName>
    <active>true</active>
    <description>Product Anchor Level should be empty, if Anchor Type is Customer</description>
    <errorConditionFormula>AND( $Setup.cgcloud__Validation_Rules_Setting__c.cgcloud__Bypass_Validation__c = FALSE, Text(cgcloud__Anchor_Type__c) = &apos;Customer&apos;, NOT(ISBLANK(Text(cgcloud__Product_Anchor_Level__c ))))</errorConditionFormula>
    <errorMessage>A Product Anchor Level selection isn&apos;t allowed when the Anchor Type is Customer. Remove the Product Anchor Level or change the Anchor Type.</errorMessage>
</ValidationRule>